<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.home.HomeFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchHappiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_switch_happiness" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchOptimism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_switch_optimism" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchKindness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_switch_kindness" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchGiving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_switch_giving" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchRespect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_switch_respect" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchEgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_switch_ego" />

</LinearLayout>